style header for mobile

--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/master.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/mediaQueries.css" media="screen" title="no title" charset="utf-8">
-    <title>Gracie LUndell | CSS Code Review 2</title>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Abel' rel='stylesheet' type='text/css'>
+    <meta name="viewport" content="width=device-width">
+    <title>Gracie Lundell | CSS Code Review 2</title>
   </head>
   <body>
+    <div class="navbar">
+      <h1>Starwest Botanicals</h1>
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Bulk Tea</a></li>
+          <li><a href="#">Essential Oils</a></li>
+          <li><a href="#">Shop</a></li>
+        </ul>
+    </div>
 
+    <div class="textbox">
+      <h1></h1>
+      <h4></h4>
+    </div>
+    <div class="big column">
+
+    </div>
+    <div class="small column">
+
+    </div>
+    <div class="small column">
+
+    </div>
   </body>
 </html>
