--- a/index.html
+++ b/index.html
@@ -9,28 +9,31 @@
     <title>Gracie Lundell | CSS Code Review 2</title>
   </head>
   <body>
-    <div class="navbar">
-      <h1>Starwest Botanicals</h1>
-        <ul>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Bulk Tea</a></li>
-          <li><a href="#">Essential Oils</a></li>
-          <li><a href="#">Shop</a></li>
-        </ul>
-    </div>
+    <div class="wrapper">
+      <div class="navbar">
+        <h1>Starwest Botanicals</h1>
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Bulk Tea</a></li>
+            <li><a href="#">Essential Oils</a></li>
+            <li><a href="#">Shop</a></li>
+          </ul>
+      </div>
 
-    <div class="textbox">
-      <h1></h1>
-      <h4></h4>
-    </div>
-    <div class="big column">
+      <div class="textbox">
+        <h1>Wholesale Herbs and Spices</h1>
+        <h4>Certified Organic</h4>
+      </div>
+      <div class="big column">
+        <img src="img/pink.png" alt="" />
+      </div>
+      <div class="small column">
 
-    </div>
-    <div class="small column">
+      </div>
+      <div class="small column">
 
-    </div>
-    <div class="small column">
+      </div>
+    </div><!-- end wrapper -->
 
-    </div>
   </body>
 </html>
