--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
 
       <div class="textbox">
         <h1>Wholesale Herbs and Spices</h1>
-        <h4>Certified Organic</h4>
+        <p>Certified Organic</p>
       </div>
       <div class="big column">
-        <img src="img/pink.png" alt="" />
+        <img src="img/herbs.jpg" alt="" />
+        <h1>Why Loose Leaf Teas</h1>
       </div>
       <div class="small column">
+
 
       </div>
       <div class="small column">
