--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css/master.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/mediaQueries.css" media="screen" title="no title" charset="utf-8">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Abel' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/font-awesome.min.css" media="screen" title="no title" charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Gracie Lundell | CSS Code Review 2</title>
   </head>
@@ -24,9 +25,10 @@
         <h1>Wholesale Herbs and Spices</h1>
         <p>Certified Organic</p>
       </div>
-      <div class="big column">
+
+      <div class="big">
         <img src="img/herbs.jpg" alt="" />
-        <h1>Why Loose Leaf Teas</h1>
+        <h1><i class="fa fa-caret-right"></i>Why Loose Leaf Teas</h1>
       </div>
       <div class="small column">
 
