Change project to be about Departure

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/master.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/mediaQueries.css" media="screen" title="no title" charset="utf-8">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Abel' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lora|Playfair+Display|Josefin+Slab:400,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/font-awesome.min.css" media="screen" title="no title" charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Gracie Lundell | CSS Code Review 2</title>
@@ -12,30 +12,33 @@
   <body>
     <div class="wrapper">
       <div class="navbar">
-        <h1>Starwest Botanicals</h1>
+        <h1>Departure</h1>
           <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Bulk Tea</a></li>
-            <li><a href="#">Essential Oils</a></li>
-            <li><a href="#">Shop</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Food & Drink</a></li>
+            <li><a href="#">Private Dining</a></li>
+            <li><a href="#">Press</a></li>
           </ul>
       </div>
 
       <div class="textbox">
-        <h1>Wholesale Herbs and Spices</h1>
-        <p>Certified Organic</p>
+        <h1>SW 5th & Morrison</h1>
+        <p>Portland, OR</p>
       </div>
 
-      <div class="big">
-        <img src="img/herbs.jpg" alt="" />
-        <h1><i class="fa fa-caret-right"></i>Why Loose Leaf Teas</h1>
+      <div class="big column">
+        <img src="img/departure.jpg" alt="" />
+        <h1><i class="fa fa-caret-right"></i>Reservations</h1>
+      </div>
+      <div class="top column">
+        <h1>Featured Press</h1>
+        <p>2016 Best Portland New Year's Eve Restaurants</p>
+
       </div>
       <div class="small column">
-
-
-      </div>
-      <div class="small column">
-
+        <p>
+          Departure’s ambitious menu captivates diners with its masterful remix of authentic coastal cuisines. From street food-styled starters to meal-sized classics, rice and noodle specialties to market-fresh sushi, Departure embraces the bounty of the Pacific Northwest to deliver the fiery flavors of the Far east.
+        </p>
       </div>
     </div><!-- end wrapper -->
 
