Style columns for tablet

--- a/index.html
+++ b/index.html
@@ -13,33 +13,33 @@
     <div class="wrapper">
       <div class="navbar">
         <h1>Departure</h1>
+        <div class="nav">
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Food & Drink</a></li>
             <li><a href="#">Private Dining</a></li>
             <li><a href="#">Press</a></li>
           </ul>
+        </div>
       </div>
 
-      <div class="textbox">
-        <h1>SW 5th & Morrison</h1>
-        <p>Portland, OR</p>
+      <div class="image">
+        <div class="textbox">
+          <h1>SW 5th & Morrison</h1>
+          <p>Portland, OR</p>
+        </div>
       </div>
-
-      <div class="big column">
-        <img src="img/departure.jpg" alt="" />
-        <h1><i class="fa fa-caret-right"></i>Reservations</h1>
-      </div>
-      <div class="top column">
-        <h1>Featured Press</h1>
+      <div class="feature column">
+        <h1 class="title">Featured Press</h1>
         <p>2016 Best Portland New Year's Eve Restaurants</p>
 
       </div>
-      <div class="small column">
+      <div class="description column">
         <p>
           Departure’s ambitious menu captivates diners with its masterful remix of authentic coastal cuisines. From street food-styled starters to meal-sized classics, rice and noodle specialties to market-fresh sushi, Departure embraces the bounty of the Pacific Northwest to deliver the fiery flavors of the Far east.
         </p>
       </div>
+
     </div><!-- end wrapper -->
 
   </body>
