Style large format

--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
         </div>
       </div>
 
-      <div class="image">
-        <div class="textbox">
-          <h1>SW 5th & Morrison</h1>
-          <p>Portland, OR</p>
-        </div>
+      <div class="textbox">
+        <h1>SW 5th & Morrison</h1>
+        <p>Portland, OR</p>
+      </div>
+      <div class="image column">
+
       </div>
       <div class="feature column">
         <h1 class="title">Featured Press</h1>
@@ -36,7 +37,7 @@
       </div>
       <div class="description column">
         <p>
-          Departure’s ambitious menu captivates diners with its masterful remix of authentic coastal cuisines. From street food-styled starters to meal-sized classics, rice and noodle specialties to market-fresh sushi, Departure embraces the bounty of the Pacific Northwest to deliver the fiery flavors of the Far east.
+          Departure’s ambitious menu captivates diners with its masterful remix of authentic coastal cuisines. From street food-styled starters to meal-sized classics, rice and noodle specialties to market-fresh sushi, Departure embraces the bounty of the Pacific Northwest to deliver the fiery flavors of the Far East.
         </p>
       </div>
 
